<resources>
  <string name="title_home">Home Page</string>
  <string name="title_init_inventory">Initial Inventory</string>
  <string name="title_physical_inventory">Inventory</string>
  <string name="title_stock_cards">Stock Overview</string>
  <string name="title_kit_stock_cards">Kit Overview</string>
  <string name="title_unpack_kit">Unpack Kit</string>
  <string name="title_requisition">Create Requisition Balancete for Via classica</string>
  <string name="title_pod">Proof of Delivery for %1$s</string>
  <string name="title_issue_voucher">Issue Voucher for %1$s</string>
  <string name="hint_network_error">NetWork error please check you network connection</string>
  <string name="hint_token_expired_error">Token is expired, please login again</string>
  <string name="hint_username">User Name</string>
  <string name="hint_password">Password</string>
  <string name="btn_login">LOG IN</string>
  <string name="msg_empty_user">Username and password cannot be blank</string>
  <string name="msg_invalid_user">Username or Password is incorrect.</string>
  <string name="msg_sync_products_list_failed">Download of products from the server failed, please login again.</string>
  <string name="msg_sync_stock_movements_data">Synchronizing stock movement data</string>
  <string name="msg_fetching_products">Downloading product list…</string>
  <string name="msg_service_lists">Downloading list of services…</string>
  <string name="msg_sync_requisition_data">Synchronizing requisition data</string>
  <string name="msg_sync_requisition_failed">Download of requisition data failed, please login again.</string>
  <string name="msg_sync_stock_movement_failed">Download of stock movement data failed, please login again.</string>
  <string name="msg_initial_sync_success">Initial sync successful. Tablet is ready for use.</string>
  <string name="version_number"><![CDATA[Version <b>%1$s</b>]]> </string>
  <string name="label_dummy_product">Paracetamol</string>
  <string name="label_dummy_unit">500mg</string>
  <string name="msg_inventory_check_failed">Quantity cannot be blank!</string>
  <string name="btn_done">VERIFIED</string>
  <string name="msg_save_before_exit">Please save initial inventory before exiting the app</string>
  <string name="btn_no_stock">NO STOCK</string>
  <string name="btn_remove_stock">REMOVE PRODUCT</string>
  <string name="btn_add_product">Add Products</string>
  <string name="title_basic_products">Basic Products</string>
  <string name="msg_can_not_add_duplicate">Product %1$s already exists, please add a new one.</string>
  <string name="label_soh_amount">Stock Existente</string>
  <string name="hint_soh_amount">Amount</string>
  <string name="tv_batch">Batch &amp; expiry date</string>
  <string name="msg_error_basic_products">All the basic products have to be set up in order to continue</string>
  <string name="label_stock_cards">Stock Card Overview</string>
  <string name="label_kits_stock_cards">Kits</string>
  <string name="label_sync">Sync Data</string>
  <string name="action_add_new_drug">Add new product</string>
  <string name="label_last_synced_ago">%s since last sync</string>
  <string name="label_rnr_form_last_synced_time_ago">Requisition last synced %s ago</string>
  <string name="label_stock_card_last_synced_time_ago">Stock cards last synced %s ago</string>
  <string name="msg_back_twice_to_exit">Press back button again to exit.</string>
  <string name="action_sign_out">Sign Out</string>
  <string name="initial_rnr_sync_failed">Initial requisition sync failed, please retry.</string>
  <string name="initial_stock_movement_sync_failed">Initial stock card sync failed, please retry.</string>
  <string name="initial_sync_failed">Initial sync failed</string>
  <string name="label_mmia_title">MMIA - %1$s to %2$s</string>
  <string name="label_rnrfrom_left_header">PRODUCTS</string>
  <string name="label_rnrfrom_left_header_old">Medicine</string>
  <string name="label_regime_header_name">THERAPEUTIC REGIME</string>
  <string name="total">Total</string>
  <string name="total_title">Total patients</string>
  <string name="total_title_old">TOTAL</string>
  <string name="patient_column_name_left">TYPE</string>
  <string name="patient_column_name_right">TOTAL</string>
  <string name="total_pharmacy">Community pharmacy</string>
  <string name="ape">APEs</string>
  <string name="label_mmia_speed_info_header">Number of patients on ART</string>
  <string name="hint_mmia_comment">Observations</string>
  <string name="mmia_comment_should_not_empty">MMIA comment should not empty</string>
  <string name="btn_complete">Complete</string>
  <string name="btn_new_movement">NEW MOVEMENT</string>
  <string name="btn_submit">Submit for Approval</string>
  <string name="label_initial_amount">Initial Stock</string>
  <string name="label_initial_amount_old">Initial Amount</string>
  <string name="label_received_mmia">Entries</string>
  <string name="label_issued_mmia">Issues</string>
  <string name="label_adjustment">Loss &amp; Adjustments</string>
  <string name="label_adjustment_old">Adjustments</string>
  <string name="button_AL">AL</string>
  <string name="button_inventory">Inventory</string>
  <string name="label_inventory">Inventory</string>
  <string name="label_validate">Expire date</string>
  <string name="label_validate_old">Expiration</string>
  <string name="label_issued_unit">UNIT</string>
  <string name="label_issued_unit_old">Unit of Issue</string>
  <string name="hint_error_input">Invalid Input</string>
  <string name="btn_save">Save</string>
  <string name="msg_back_confirm">Are you sure you want to quit without saving your work? If you click \'yes\', your draft will be deleted.</string>
  <string name="msg_regime_del_confirm">Are you sure that you want to remove this regime?</string>
  <string name="btn_positive">Yes</string>
  <string name="btn_negative">No</string>
  <string name="msg_mmia_submit_tip">Your MMIA form has been successfully saved,\nand will submit automatically when you have a data connection.</string>
  <string name="msg_mmtb_submit_tip">Your MMTB form has been successfully saved,\nand will submit automatically when you have a data connection.</string>
  <string name="msg_reason_for_total_not_match"><![CDATA[Add reason for mismatch between regime & patient totals]]></string>
  <string name="msg_regime_total_and_patient_total_not_match">The regime and patient totals do not match. Please correct your figures or add a comment that explains why the totals differ</string>
  <string name="btn_ok">OK</string>
  <string name="label_add_adult_regime">+ Adult regime</string>
  <string name="label_add_child_regime">+ Child regime</string>
  <string name="msg_regime_already_exist">The selected regime already exist</string>
  <string name="mmia_therapeutic">Therapeutic lines</string>
  <string name="mmia_1stline">1st Line</string>
  <string name="mmia_2ndline">2nd Line</string>
  <string name="mmia_3rdline">3rd Line</string>
  <string name="label_mmtb_title">MMTB - %1$s to %2$s</string>
  <string name="mmtb_age_group_form_title">Quantification of users by age groups</string>
  <string name="mmtb_three_line_1_title">Age Groups</string>
  <string name="mmtb_three_line_1">Adults</string>
  <string name="mmtb_three_line_2_title">Treatment</string>
  <string name="mmtb_three_line_2">Child &lt; 25 Kg</string>
  <string name="mmtb_three_line_3_title">Prophylaxis</string>
  <string name="mmtb_three_line_3">Child &gt; 25 Kg</string>
  <string name="mmtb_patient_info_form_title">Quantification of patients</string>
  <string name="mmtb_new_patient_form_title">New Patients in the TB Sector</string>
  <string name="mmtb_follow_up_prophylaxis_form_title">Follow-up Prophylaxis\n(PUs and Public Pharmacy)</string>
  <string name="mmtb_dispensation_type_form_title">Type of Dispensation of Prophylactics</string>
  <string name="mmtb_patient_type_field">Patient/Type</string>
  <string name="mmtb_prophylaxis_phases_field">Prophylaxis Phases</string>
  <string name="mmtb_dispensation_type_field">Dispensation Frequency</string>
  <string name="mmtb_treatment_phase_form_title">Number of ays spent in the different phases of Treatment</string>
  <string name="mmtb_title_treatment_phase">Treatment Phases</string>
  <string name="mmtb_title_number_of_day_off">Number of Days off</string>
  <string name="mmtb_title_adult">Adult</string>
  <string name="mmtb_title_pediatric">Pediatric</string>
  <string name="mmtb_drug_consumption_form_title">Consumption of Prophylactic Drugs</string>
  <string name="mmtb_title_product">Product</string>
  <string name="mmtb_title_number_of_pills">Number of Pills</string>
  <string name="mmtb_title_pharmacy_outpatient">PUs and Pharmacy Outpatient</string>
  <string name="mmtb_new_adult_sensitive">New Adult Sensitive</string>
  <string name="mmtb_new_adult_mr">New Adult MR</string>
  <string name="mmtb_new_adult_xr">New Adult XR</string>
  <string name="mmtb_new_child_sensitive">New Child Sensitive</string>
  <string name="mmtb_new_child_mr">New Child MR</string>
  <string name="mmtb_new_child_xr">New Child XR</string>
  <string name="mmtb_start_phase">Start</string>
  <string name="mmtb_continue_phase">Continues/Maintenance</string>
  <string name="mmtb_final_phase">Final/Last Dispensation</string>
  <string name="mmtb_frequency_monthly">Monthly</string>
  <string name="mmtb_frequency_quarterly">Quarterly</string>
  <string name="label_via_kit_received">No. of Kits Received</string>
  <string name="label_via_kit_opened">No. of Kits Opened</string>
  <string name="label_product_codes">Product Codes</string>
  <string name="label_product_name">Product Name</string>
  <string name="label_movement_date">Date of Movement</string>
  <string name="label_reason">Origin/Destination of Movement</string>
  <string name="label_document_no">Document Number</string>
  <string name="label_negative_adjustment">Negative Adjustment</string>
  <string name="label_positive_adjustment">Positive Adjustment</string>
  <string name="label_stock_existence">Stock Existente</string>
  <string name="btn_cancel">CANCEL</string>
  <string name="table_dispensed">Type of dispense</string>
  <string name="table_dispensed_left_5months">5 months ago</string>
  <string name="table_dispensed_left_4months">4 months ago</string>
  <string name="table_dispensed_left_3months">3 months ago</string>
  <string name="table_dispensed_left_2months">2 months ago</string>
  <string name="table_dispensed_left_last_months">Last month</string>
  <string name="table_dispensed_left_within_months">Within this month</string>
  <string name="table_dispensed_left_total">Total patients with treatment</string>
  <string name="table_dispensed_label_dt">Dispensed for 3 Months(DT)</string>
  <string name="table_dispensed_label_ds">Dispensed for 6 Months(DS)</string>
  <string name="table_dispensed_label_dm">Dispensed for a Month</string>
  <string name="table_dispensed_label_total">TOTAL</string>
  <string name="table_dispensed_label_adjustment">Adjustment</string>
  <string name="RECEIVE">Entries</string>
  <string name="ISSUE">Issues</string>
  <string name="NEGATIVE_ADJUST">Negative Adjustments</string>
  <string name="POSITIVE_ADJUST">Positive Adjustments</string>
  <string name="label_removed_drug_from_stock">You removed this drug from your Stock Card view</string>
  <string name="label_view_movement_history">View movement history</string>
  <string name="label_add_drug_to_stock">Add drug to stock overview</string>
  <string name="document_number">Document number</string>
  <string name="label_lot_number">What is the lot number?</string>
  <string name="hint_lot_number">Lot number</string>
  <string name="label_add_lot_expire">When does the lot expire?</string>
  <string name="title_add_new_lot">Add new lot to</string>
  <string name="initial_stock">Initial Stock</string>
  <string name="entries">Entries</string>
  <string name="loss_and_adjustment">Loss and Adjustment</string>
</resources>