<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Dialog.Container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/Dialog.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_add_new_lot" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_lot_number" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium">

            <EditText
                android:id="@+id/et_lot_number"
                style="@style/Dialog.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_lot_number" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_add_lot_expire" />

        <DatePicker
            android:id="@+id/dp_add_new_lot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false" />

    </LinearLayout>


    <LinearLayout
        style="@style/Dialog.ActionPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium">

        <TextView
            android:id="@+id/btn_cancel"
            style="@style/Dialog.Btn.Negative"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/default_button_height"
            android:text="@string/btn_cancel" />

        <Button
            android:id="@+id/btn_complete"
            style="@style/Dialog.Btn.Positive"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/default_button_height"
            android:layout_marginStart="16dp"
            android:text="@string/btn_complete" />
    </LinearLayout>

</LinearLayout>