<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ItemRegime.Container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_bg_light_gray_no_bottom"
    android:minHeight="@dimen/mmia_ragime_title_minHeight">

    <TextView
        style="@style/MMIA.Regime.Title"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:text="@string/label_regime_header_name" />

    <TextView
        style="@style/MMIA.Regime.Title"
        android:text="@string/total_title" />

    <TextView
        android:id="@+id/tv_total_pharmacy_title"
        style="@style/MMIA.Regime.Title"
        android:text="@string/total_pharmacy" />
</LinearLayout>
