<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_small">

            <TextView
                android:id="@+id/tv_product_name"
                style="@style/Text.Black.Normal.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_product_unit"
                style="Text.Black.Normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_right_black">

            <TextView
                style="@style/AllStockHistory.ItemTable.Header"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/border_top_left_black"
                android:text="@string/label_movement_date" />

            <TextView
                style="@style/AllStockHistory.ItemTable.Header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/border_top_left_black"
                android:text="@string/label_reason" />

            <TextView
                style="@style/AllStockHistory.ItemTable.Header"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/border_top_left_black"
                android:text="@string/document_number" />

            <TextView
                style="@style/AllStockHistory.ItemTable.Header"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_top_left_black"
                android:text="@string/RECEIVE" />

            <TextView
                style="@style/AllStockHistory.ItemTable.Header"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/border_top_left_black"
                android:text="@string/NEGATIVE_ADJUST" />

            <TextView
                style="@style/AllStockHistory.ItemTable.Header"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/border_top_left_black"
                android:text="@string/POSITIVE_ADJUST" />

            <TextView
                style="@style/AllStockHistory.ItemTable.Header"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_top_left_black"
                android:text="@string/ISSUE" />

            <TextView
                style="@style/AllStockHistory.ItemTable.Header"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/border_top_left_black"
                android:text="@string/label_stock_existence" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_stock_movement_item_list"
            style="@style/AllStockHistory.ItemTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never" />

    </LinearLayout>

</android.support.v7.widget.CardView>